ocp/prometheus/service-prometheus.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: default
  uid: c51b9245-a231-4b8f-9dcf-213c7c44bacc
  resourceVersion: '169229'
  creationTimestamp: '2024-01-05T11:43:13Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2024-01-05T11:43:13Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":9090,"protocol":"TCP"}':
              .: {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 10.217.5.41
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 10.217.5.41
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: prometheus
status:
  loadBalancer: {}
